--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,6 @@
     font-style: normal;
     max-width: 1600px;
     margin: auto;
-    
-
 
 }
 
@@ -150,6 +148,8 @@ ol {
     display: block;
     width: 1600px;
     height: 600px;
+    
+    background-image: url(../img/overlay/Imgover.jpg);
     background-color:#2F303A;
     padding-top: 200px;
     padding-bottom: 280px;
@@ -252,7 +252,7 @@ border-radius: 3px;*/
 .forpad:nth-child(n + 2) {
     padding-left: 15px;
 }
-}
+
 /* SECTION FEATURES END */
 
 
@@ -345,6 +345,7 @@ border-radius: 3px;*/
     height: 368px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    background-color: #ffffff;
 }
 /* OURSTEAMSFLEX-END */
 
@@ -357,7 +358,7 @@ border-radius: 3px;*/
     height: 252px;
     background-color: #2F303A;
     text-decoration: none;
-    margin-top: 94px;
+    /* margin-top: 94px; */
 }
 
 .site-logo-f {
@@ -497,6 +498,7 @@ border-radius: 3px;*/
     width: 1170px;
     height: 1272px;
     box-sizing: border-box;
+    margin-bottom: 34px;
 }
 
 
